kuber-homeworks_3.3/app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: app
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
      app: frontend

---

apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: app
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
      app: backend

---

apiVersion: v1
kind: Service
metadata:
  name: cache
  namespace: app
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
      app: cache
